Add a proper web chat key

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="bot">
-        <iframe src="https://webchat.botframework.com/embed/commerce_chatbot_v1?s=lPBKRvNTMpo.cwA._Fs.UnXBuU5HPx-r4SjPh7cIjmG8rcQJ3j0kAENqj6HdP0E" 
+        <iframe src="https://webchat.botframework.com/embed/commerce_chatbot_v1?s=lPBKRvNTMpo.cwA.Sr0.-3CF3v81O-J8tKWTIezLHs2H31NZ5sPSRYlCDnMW5sI" 
                 style="height: 600px; width: 500px; resize: both;">
         </iframe>
     </div>
